--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -8,8 +8,8 @@
           Duke University Class of 2021 || Computer Science and Political Science
         </div>
         <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-          Ethan is a sophomore at Duke University passionate about applying technology to create more efficient policy solutions. 
-          He works as a Research Assistant, using natural word processing to help predict civil crackdowns in partnership with USAID, and as Treasurer for Camp Kesem at Duke University, a non-profit serving children affected by a parents cancer. 
+          Ethan is a sophomore at Duke University passionate about applying technology to create more efficient policy solutions.
+          He works as a Research Assistant, using natural word processing to help predict civil crackdowns in partnership with USAID, and as Treasurer for Camp Kesem at Duke University, a non-profit serving children affected by a parents cancer.
           He has previously worked on a congressional campaign assisting with fundraising, and will spend this summer at Kessel Run, helping deploy software for the Air Force.
         </div>
     </div>
@@ -24,12 +24,10 @@
         Duke University Class of 2019 || Public Policy
       </div>
       <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad.
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        Sonny Byun is a senior at Duke University studying Public Policy with a minor in Theatre Studies.
+        From Atlanta, GA, his coursework has largely revolved around national security and defense studies.
+        This past summer, he worked in Washington D.C. for a lobbying firm specializing in national security firms and federal agencies.
+        After graduation, he will be working in management consulting for Accenture in Charlotte, North Carolina.
       </div>
     </div>
 </div>
@@ -40,16 +38,11 @@
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     Chip Covin
     <div style="font-size: .5cm">
-      Idk when Chip graduated from Fuqua and what his major is
+      Executive MBA, Fuqua School of Business
     </div>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad.
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
-    </div>
+      Chip is a long time product manager who has worked at Charles Schwab, Fidelity, and Cisco.
+      He is certified in AWS and worked on deploying software for years.</div>
   </div>
 </div>
 <div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
@@ -59,15 +52,12 @@
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     Dina Daas
     <div style="font-size: .5cm">
-      Duke University Class of 2020 || Dina's majors
+      Duke University Class of 2020 || Political Science and Computer Science
     </div>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad.
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      Dina is a Junior at Duke and is interested in Machine Learning and the US Government's
+      role in regulating Artificial Intelligance.
+      She is working at Capital One this summer and is a member of Girl's Who Code.
     </div>
   </div>
 </div>
@@ -78,15 +68,12 @@
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     <div>Luke Truitt</div>
     <div style="font-size: .5cm">
-      Duke University Class of 2021 || Luke's majors
+      Duke University Class of 2021 || Electrical and Computer Engineering, Computer Science and Economics
     </div>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad.
-      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      Luke is a sophomore at Duke University, involved in the Duke Speech Team, is an Undergraduate Teaching Assitant and peer tutor.
+      He has worked at ProValens Inc., a Minneapolis-based Health IT company, Tyrata Inc., a Durham-based sensor firm, and on nnumerous other projects on and off campus.
+      He will be working in Detroit at General Motors Headquarters on Electic and Self-Driving vehicles.
     </div>
   </div>
 </div>
