--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -5,8 +5,7 @@
 </div>
 <div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "end center">
     <div class = "about-us-text" fxLayoutAlign = "center center" >
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        We are a team of Product Managers, Consultants and Developers with a common goal of making the world a more efficient place.
     </div>
     <button mat-raised-button class = "about-us-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
         <div>Read More</div>
@@ -23,13 +22,17 @@
     </div>
 </div>
 <div class = "roadmap-container" fxLayout = "column" fxLayoutAlign = "center center">
+  <h1 class="roadmap-header" >What's Next?</h1>
     <div class = "roadmap-text" fxLayoutAlign = "center center" >
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        With a detailed study in the US Marine Corps underway, we are moving toward Marine-wide deployment and expanding into the other areas of the public sector.
+        <br><br>
+        We are excited to begin the process of working with small clinics and financial management firms to open these industries to a more efficient and accurate way of communicating crucial information.
     </div>
-    <button mat-raised-button class = "roadmap-button" fxLayoutAlign = "center center" (click) = "onRoadmap()">
+    <!--
+      <button mat-raised-button class = "roadmap-button" fxLayoutAlign = "center center" (click) = "onRoadmap()">
         <div>Where We're Going</div>
-    </button>
+      </button>
+    -->
 </div>
 
 
