--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -18,12 +18,16 @@ body {
     background-position: top 15% left 50%;
     background-origin: initial;
     width: 100%;
-    height: 20cm;
+    height: 24cm;
+    border-bottom-style: solid;
+    border-width: 5px;
+    border-color: #33a1fd;
 }
 
 .product-container {
     width: 100%;
     height: 20cm;
+
 }
 
 .roadmap-container {
@@ -51,6 +55,7 @@ body {
     width: 70%;
     margin-top: 12cm;
     font-size: 1.5cm;
+    text-align: center;
 }
 
 .about-us-button {
@@ -66,6 +71,7 @@ body {
     font-weight: bold;
     outline: none;
     margin-top: 1cm;
+    margin-bottom: 1cm;
     text-align: center;
 }
 
@@ -83,6 +89,7 @@ body {
     margin-left: 0.5cm;
     width: 50%;
     font-size: 1.5cm;
+    text-align: center;
 }
 
 
@@ -116,11 +123,18 @@ body {
 
 .roadmap-text {
     height: min-content;
-    font-size: bold;
     width: 70%;
-    font-size: 1.5cm;
+    font-size: 1cm;
+    text-align: center;
 }
 
+.roadmap-header {
+  width:100%;
+  text-align: center;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #33a1fd;
+}
 .roadmap-button {
     width: 6cm;
     height: 1.5cm;
