--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -1,33 +1,14 @@
-<div class = "intro-container" fxLayout = "column" fxLayoutAlign = "center">
+<div class = "top-person-container" fxLayout = "column" fxLayoutAlign = "center">
     <div class = "image-cropper">
-        <img src="../../../assets/images/SpearEthan.jpg" class = "ethan-pic">
+      <img src="../../../assets/images/MihirSpear.png" class = "mihir-pic">
     </div>
     <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
-        Ethan Astrachan
-        <div style="font-size: .5cm">
-          Duke University Class of 2021 || Computer Science and Political Science
-        </div>
-        <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-          Ethan is a sophomore at Duke University passionate about applying technology to create more efficient policy solutions.
-          He works as a Research Assistant, using natural word processing to help predict civil crackdowns in partnership with USAID, and as Treasurer for Camp Kesem at Duke University, a non-profit serving children affected by a parents cancer.
-          He has previously worked on a congressional campaign assisting with fundraising, and will spend this summer at Kessel Run, helping deploy software for the Air Force.
-        </div>
-    </div>
-</div>
-<div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
-    <div class = "image-cropper">
-      <img src="../../../assets/images/SpearSonny.png" class = "sonny-pic">
-    </div>
-    <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
-      Sonny Byun
+      Mihir Dutta
       <div style="font-size: .5cm">
-        Duke University Class of 2019 || Public Policy
+        X-Force Fellow || Duke University Class of 2020 || Statistics
       </div>
       <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-        Sonny Byun is a senior at Duke University studying Public Policy with a minor in Theatre Studies.
-        From Atlanta, GA, his coursework has largely revolved around national security and defense studies.
-        This past summer, he worked in Washington D.C. for a lobbying firm specializing in national security firms and federal agencies.
-        After graduation, he will be working in management consulting for Accenture in Charlotte, North Carolina.
+        Need Bio
       </div>
     </div>
 </div>
@@ -38,40 +19,27 @@
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     Chip Covin
     <div style="font-size: .5cm">
-      Executive MBA, Fuqua School of Business
+      Former Executive Product Manager, Charles Schwab || Executive MBA, Fuqua School of Business
     </div>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Chip is a long time product manager who has worked at Charles Schwab, Fidelity, and Cisco.
-      He is certified in AWS and worked on deploying software for years.</div>
+      Need Bio
+    </div>
   </div>
 </div>
 <div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
-  <div class = "image-cropper">
-    <img src="../../../assets/images/SpearDina.png" class = "dina-pic">
-  </div>
-  <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
-    Dina Daas
-    <div style="font-size: .5cm">
-      Duke University Class of 2020 || Computer Science and Political Science
-    </div>
-    <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-Dina is a junior at Duke University majoring in Computer Science and Political Science with a Ceritificate in Politics, Philosophy, and Economics. She is passionate about the intersection of politics and technology, and hopes to use technology as a vehicle for impact. Having grown up in Amman, Jordan before moving to New York, she is particularly interested in international affairs and working in the realm of government. She has previously worked as a full-stack developer building a trading platform for financial services, and will be spending her summer working on software for political campaigns.
-    </div>
-  </div>
-</div>
-<div class = "odd-person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearLuke.jpg" class = "luke-pic">
   </div>
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     <div>Luke Truitt</div>
     <div style="font-size: .5cm">
-      Duke University Class of 2021 || Electrical and Computer Engineering, Computer Science and Economics
+      Truitt Development || Duke University Class of 2021 || Electrical and Computer Engineering, Computer Science and Economics
     </div>
+    <br/>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Luke is a sophomore at Duke University, involved in the Duke Speech Team, is an Undergraduate Teaching Assitant and peer tutor.
-      He has worked at ProValens Inc., a Minneapolis-based Health IT company, Tyrata Inc., a Durham-based sensor firm, and on nnumerous other projects on and off campus.
-      He will be working in Detroit at General Motors Headquarters on Electic and Self-Driving vehicles.
+      Luke is the owner of software development company, Truitt Development.
+      He has worked with ProValens Inc., a Minneapolis-based Health IT company, Tyrata Inc., a Durham-based sensor firm, Vibe Music Inc., a social media music sharing company, and numerous other small to medium-sized businesses to build cloud-based solutions on Web, Android, and iOS.
+      He also has experience in Computer Vision and Applied Machine Learning with General Motors and Duke Hospital.
     </div>
   </div>
 </div>
