--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "end center">
     <div class = "about-us-text" fxLayoutAlign = "center center" >
-        We are a team of Product Managers, Consultants and Developers with a common goal of making the world a more efficient place.
+        We are a team of Product Managers, Stasticians and Developers with a common goal of making the world a more efficient place.
     </div>
     <button mat-raised-button class = "about-us-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
         <div>Read More</div>
@@ -24,9 +24,9 @@
 <div class = "roadmap-container" fxLayout = "column" fxLayoutAlign = "center center">
   <h1 class="roadmap-header" >What's Next?</h1>
     <div class = "roadmap-text" fxLayoutAlign = "center center" >
-        With a detailed study in the US Marine Corps underway, we are moving toward Marine-wide deployment and expanding into the other areas of the public sector.
+        We have DoD interest in various verticals, such as the Air Force, Marines, and Army, as well as in the medical and accounting communities.
         <br><br>
-        We are excited to begin the process of working with small clinics and financial management firms to open these industries to a more efficient and accurate way of communicating crucial information.
+        We are exploring multiple solutions within the Marine Corps, a training management platform for the Air Force, and an integrated fleet management system for the Air Force.
     </div>
 
       <button mat-raised-button class = "roadmap-button" fxLayoutAlign = "center center" (click) = "onRoadmap()">
