--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -11,6 +11,17 @@
   background-color: grey;
 }
 
+.top-person-container {
+  width: 100%;
+  height: 10cm;
+  margin-top: 3cm;
+  border-bottom-width: .1cm;
+  background-color: #034078;
+  border-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: .2cm;
+}
+
 .even-person-container {
   width: 100%;
   height: 10cm;
@@ -67,6 +78,15 @@
   margin-left: -58%;
   margin-top: -20%;
   height: 150%;
+  width: auto;
+}
+
+.mihir-pic {
+  display: inline;
+  margin: 0 auto;
+  margin-left: -160%;
+  margin-top: -70%;
+  height: 300%;
   width: auto;
 }
 
