--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -5,10 +5,11 @@
     <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
       Mihir Dutta
       <div style="font-size: .5cm">
-        X-Force Fellow || Duke University Class of 2020 || Statistics
+        X-Force Fellow || Duke University Class of 2021 || Statistics
       </div>
+      <br/>
       <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-        Need Bio
+        Mihir is a data scientist who loves leveraging technology to solve problems. In the past he has worked on a blockchain solution to identify the provenance of fresh produce as well as another blockchain project aiming to design a decentralized patent system. Before that he built a scheduling and tutoring app for his high school. Mihir has experience working with the Marines, Air Force, and the Special Forces.
       </div>
     </div>
 </div>
@@ -21,8 +22,11 @@
     <div style="font-size: .5cm">
       Former Executive Product Manager, Charles Schwab || Executive MBA, Fuqua School of Business
     </div>
+    <br/>
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      Need Bio
+      Chip Covin has over 20 years of product management leadership experience at organizations including Cisco, Fidelity National Information Systems, and most recently as managing director, product management at Charles Schwab. His multi-disciplinary background includes product development, product management, B2B marketing and sales, finance, and corporate strategy.
+
+      Chip holds a MBA from Duke University and BS degrees in Finance, Information Systems, and History from University of North Carolina – Greensboro.
     </div>
   </div>
 </div>
@@ -39,7 +43,7 @@
     <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
       Luke is the owner of software development company, Truitt Development.
       He has worked with ProValens Inc., a Minneapolis-based Health IT company, Tyrata Inc., a Durham-based sensor firm, Vibe Music Inc., a social media music sharing company, and numerous other small to medium-sized businesses to build cloud-based solutions on Web, Android, and iOS.
-      He also has experience in Computer Vision and Applied Machine Learning with General Motors and Duke Hospital.
+      He also has experience in Computer Vision, Applied Machine Learning, and Deep-Learning with General Motors and Duke Hospital.
     </div>
   </div>
 </div>
