--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -1,7 +1,7 @@
 
 .intro-container {
   width: 100%;
-  height: 10cm;
+  height: 11cm;
   margin-top: 3cm;
   border-color: black;
   border-bottom-style: solid;
@@ -13,7 +13,7 @@
 
 .top-person-container {
   width: 100%;
-  height: 10cm;
+  height: 11cm;
   margin-top: 3cm;
   border-bottom-width: .1cm;
   background-color: #034078;
@@ -24,7 +24,7 @@
 
 .even-person-container {
   width: 100%;
-  height: 10cm;
+  height: 11cm;
   border-bottom-width: .1cm;
   background-color: #034078;
   border-color: black;
@@ -34,7 +34,7 @@
 
 .odd-person-container {
   width: 100%;
-  height: 10cm;
+  height: 11ycm;
   border-bottom-width: .1cm;
   background-color: grey;
   border-color: black;
