--- a/SPEAR/src/app/components/roadmap/roadmap.component.html
+++ b/SPEAR/src/app/components/roadmap/roadmap.component.html
@@ -1,2 +1,2 @@
-<div class="intro-text">Where We're Going</div>
-<img src = "../../../assets/images/roadmap.png">
+<div class="intro-text">Here's Where We're At</div>
+<img src = "../../../assets/images/SpearTimeline.PNG">
