--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -34,7 +34,7 @@
 
 .odd-person-container {
   width: 100%;
-  height: 11ycm;
+  height: 11cm;
   border-bottom-width: .1cm;
   background-color: grey;
   border-color: black;
