home screen changes

--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class = "intro-container" fxLayout = "row" fxLayoutAlign = "center center">
     <div class = "intro-text">
-        Custom APIs to fix your data transfer issues
+        Custom APIs to connect Systems, Services, and Databases
     </div>
 </div>
 <div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "end center">
@@ -32,7 +32,6 @@
       <button mat-raised-button class = "roadmap-button" fxLayoutAlign = "center center" (click) = "onRoadmap()">
         <div>Where We're Going</div>
       </button>
-
 </div>
 
 
